missing placeholder fixed

--- a/public/login.html
+++ b/public/login.html
@@ -8,7 +8,7 @@
         <form action="/login" method="post">
             <fieldset>
                 <input type="text" name="username" placeholder="USERNAME"> <br>
-                <input type="password" name="password" id="PASSWORD"> <br>
+                <input type="password" name="password" id="PASSWORD" placeholder="PASSWORD"> <br>
                 <input type="submit">
             </fieldset>
         </form>
